Fixed loading bug where on reload the screen would get stuck if you scrolled somewhere other than the homepage

--- a/Personal_Website-Frontend/src/styles/App.sass
+++ b/Personal_Website-Frontend/src/styles/App.sass
@@ -23,6 +23,12 @@ a
   text-decoration: none
   color: #2f4858
 
+.App
+  height: 100vh
+  background: linear-gradient(130deg, #14bdad 50%, #7ae2dd 50%)
+
+.App-Div
+
 .Initial-Scene
   height: 100vh
   width: 100vw
@@ -401,15 +407,15 @@ a
     margin-right: 1%
 
 .Absolute-Icons-Arrow-Up
-  color: white
   position: fixed
   bottom: 10px
   right: 10px
+  cursor: pointer
 
 .Absolute-Icons-Hamburger
-  color: white
   position: fixed
   bottom: 10px
   left: 10px
+  cursor: pointer
 
 /*# sourceMappingURL=App.css.map
